swag fmt
