# app/docs/swagger.json
@@ -505,6 +505,42 @@
             }
         },
         "/recipeIngredients": {
+            "get": {
+                "description": "レシピの材料一覧を取得するエンドポイント",
+                "consumes": [
+                    "application/x-json-stream"
+                ],
+                "tags": [
+                    "recipeIngredients"
+                ],
+                "summary": "レシピの材料一覧を取得",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Recipe ID",
+                        "name": "recipe_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/domain.RecipeIngredientsForGet"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/usecase.ResultStatus"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "This API regist recipe ingredients and return this results data.",
                 "consumes": [
