# app/internal/interface/controllers/product/recipe_favorites_controller.go
@@ -27,14 +27,14 @@ func NewRecipeFavoritesController(db gateways.DB) *RecipeFavoritesController {
 	}
 }
 
-// @summary		Get list of recipes of favorite.
-// @description	This API return list of recipes of favorite.
-// @tags			recipeFavorites
-// @accept			application/x-json-stream
-// @param			user_id	query		int	true	"User ID"
-// @Success		200		{array}		domain.RecipeFavoritesForGet
-// @Failure		404		{object}	usecase.ResultStatus
-// @router			/recipeFavorites [get]
+//	@summary		Get list of recipes of favorite.
+//	@description	This API return list of recipes of favorite.
+//	@tags			recipeFavorites
+//	@accept			application/x-json-stream
+//	@param			user_id	query		int	true	"User ID"
+//	@Success		200		{array}		domain.RecipeFavoritesForGet
+//	@Failure		404		{object}	usecase.ResultStatus
+//	@router			/recipeFavorites [get]
 func (rc *RecipeFavoritesController) GetList(ctx controllers.Context) {
 
 	userID, _ := strconv.Atoi(ctx.Query("user_id"))
@@ -47,14 +47,14 @@ func (rc *RecipeFavoritesController) GetList(ctx controllers.Context) {
 	ctx.JSON(res.Code, controllers.NewH("success", recipeFavorites))
 }
 
-// @summary		ユーザーがレシピをお気に入り登録
-// @description	レシピをお気に入り登録する際のリクエスト
-// @tags		recipeFavorites
-// @accept		json
-// @Param		recipeFavorite body domain.RecipeFavorites true "user_id, recipe_id は必須"
-// @Success		200			{object}	controllers.H{data=domain.RecipeFavoritesForGet}
-// @Failure		400			{object}	controllers.H
-// @router			/recipeFavorites [post]
+//	@summary		ユーザーがレシピをお気に入り登録
+//	@description	レシピをお気に入り登録する際のリクエスト
+//	@tags			recipeFavorites
+//	@accept			json
+//	@Param			recipeFavorite	body		domain.RecipeFavorites	true	"user_id, recipe_id は必須"
+//	@Success		200				{object}	controllers.H{data=domain.RecipeFavoritesForGet}
+//	@Failure		400				{object}	controllers.H
+//	@router			/recipeFavorites [post]
 func (rc *RecipeFavoritesController) Post(ctx controllers.Context) {
 
 	f := &domain.RecipeFavorites{}
@@ -74,14 +74,14 @@ func (rc *RecipeFavoritesController) Post(ctx controllers.Context) {
 
 }
 
-// @summary		ユーザーがレシピをお気に入り解除
-// @description	レシピをお気に入り解除する際のリクエスト
-// @tags		recipeFavorites
-// @accept		json
-// @Param		recipeFavorite body domain.RecipeFavorites true "user_id, recipe_id は必須"
-// @Success		200			{object}	controllers.H
-// @Failure		400			{object}	controllers.H
-// @router			/recipeFavorites [delete]
+//	@summary		ユーザーがレシピをお気に入り解除
+//	@description	レシピをお気に入り解除する際のリクエスト
+//	@tags			recipeFavorites
+//	@accept			json
+//	@Param			recipeFavorite	body		domain.RecipeFavorites	true	"user_id, recipe_id は必須"
+//	@Success		200				{object}	controllers.H
+//	@Failure		400				{object}	controllers.H
+//	@router			/recipeFavorites [delete]
 func (rc *RecipeFavoritesController) Delete(ctx controllers.Context) {
 	f := &domain.RecipeFavorites{}
 
